--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="DevNetX - Besoin d'un site web, d'une application ou d'un service ? Nous sommes là pour vous aider à réaliser vos projets de développement web et mobile. Découvrez nos services de création de sites web, d'applications mobiles et de solutions sur mesure."
+      content="DevNetiX - Besoin d'un site web, d'une application ou d'un service ? Nous sommes là pour vous aider à réaliser vos projets de développement web et mobile. Découvrez nos services de création de sites web, d'applications mobiles et de solutions sur mesure."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>DevNetX</title>
+    <title>DevNetiX</title>
   </head>
   <body>
     <div id="root"></div>
